Patch by romain: Fix one particular problem where the terminal buffer area could go out of sync when switching between tabs. Closes #5969, thanks a lot!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36875 a95241bf-73f2-0310-859d-f6bbb57e9c96